# plr-epigenome

./: .gitignore  AUTHORS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: facs-melody-re.md  hydrop-onyx-bridge.md  validation.md
examples/: run_plate_tipseq.py
hamilton-star/: METHOD_PARAMETERS.md  README.md  method-parameters.schema.json  operator_parameters.py  run_on_pi.sh
hamilton-star/setup/: STARPI_Setup.md  STARPI_Setup_updated.md
hamilton-star/starlab_live/: 00_pta_wga_1col_lysis_reaction_dst1_DISCARD_WET.py  00_pta_wga_1col_src1lysis_src3rxn_dst1_hhs_DRY.py  00_pta_wga_96wp_demo_all12_DSPH15_DRY_ISWAP_R27P2_HHS_SRC1_SRC3.py  00_pta_wga_96wp_demo_source_col1_dest_allcols_DSPH15.py  00_pta_wga_96wp_demo_source_col1_to_dest_all12_DSPH15_DRY.py  00_pta_wga_col1_swap_source_staged_discardtips_P10_sourceH00_dspH05_bo7.py  00_wgs_prep_1col_lysis_reaction_dst1_DISCARD_WET.py  01_targeted_pcr_round1_mastermix_col1.py  02_pcr_enrichment_round1_cleanup_col1_dry.py  02_pcr_enrichment_round1_cleanup_col1_dry_v2_p50low.py  02_targeted_pcr_round1_cleanup_col1_dry.py  02_targeted_pcr_round2_index_col1.py  03_library_prep_col1_swap_source_staged_discardtips.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_P10_sourceH00_dspH05_bo5_tipcol8.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_P10_sourceH00_dspH05_bo7_tipcol3.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_P10_sourceHm05_dspH05_bo7_tipcol2.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_P50_ALL.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_P50_ALL_sourceH05_dspH10_bo3_settle.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_P50_ALL_sourceH10.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_P50_ALL_sourceH15.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_sourceCENTER_H15.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_sourceH10.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_sourceH15.py  03_library_prep_col1_swap_source_staged_discardtips_y322_x068_workonly.py  03_library_prep_col1_swap_source_staged_discardtips_y323_x068_workonly.py  03_library_prep_col1_swap_source_staged_discardtips_y325_workonly.py  03_library_prep_col1_swap_source_staged_discardtips_y330_workonly.py  04_cleanup_magpos2_troughpos3_p300_dry_offset_test.py  04_cleanup_magpos2_troughpos3_p300_dry_offset_test_leftlow_v2.py  04_cleanup_magpos2_troughpos3_p300high_p50h26_seq_safety.py  04_cleanup_magpos2_troughpos3_p300p50_residual_dry_offset_test.py  04_cleanup_magpos2_troughpos3_p300p50_residual_dry_offset_test_p50safe_h12.py  04_cleanup_magpos2_troughpos3_p300p50_residual_dry_offset_test_p50safe_h26_seq.py  BAD_y320_do_not_run.py  (+44 more)
tests/: test_cut_and_tag.py  test_discovery.py  test_dna_library_umi.py  test_dna_ultra2_umi.py  test_hydrop_atac.py  test_normalization.py  test_operator_parameters.py  test_protocol.py  test_reverse_engineering.py  test_sow.py  test_validation.py
tipseq_plr/: __init__.py  config.py  deck.py  devices.py  protocol.py  reagents.py  run.py  sow.py
(+86 files in other folders)
