[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tipseq-plr"
version = "0.1.0"
description = "PyLabRobot automation of (sci)TIP-seq for Hamilton STAR (ODTC + Heater-Shaker + Tecan QC)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "" }]
keywords = ["lab-automation", "pylabrobot", "hamilton-star", "tip-seq", "cut-and-tag", "epigenomics"]
dependencies = [
    "pylabrobot>=0.1.6",
]

[project.optional-dependencies]
live = ["sila2>=0.10"]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
tipseq-run = "tipseq_plr.run:main"

[tool.setuptools.packages.find]
include = ["tipseq_plr*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
