[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tipseq-plr"
version = "0.1.0"
description = "PyLabRobot automation of (sci)TIP-seq for Hamilton STAR (ODTC + Heater-Shaker + Tecan QC)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Di Hu", email = "255010011+di-omics@users.noreply.github.com" },
]
keywords = ["lab-automation", "pylabrobot", "hamilton-star", "tip-seq", "cut-and-tag", "epigenomics"]
dependencies = [
    "pylabrobot>=0.1.6",
]

[project.optional-dependencies]
live = ["sila2>=0.10"]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
tipseq-run = "tipseq_plr.protocols.tipseq.run:main"
cutandtag-run = "tipseq_plr.protocols.cut_and_tag.run:main"
normalize-run = "tipseq_plr.protocols.normalization.run:main"
hydrop-run = "tipseq_plr.protocols.hydrop_atac.run:main"
sow-compile = "tipseq_plr.sow:main"

[tool.setuptools.packages.find]
include = ["tipseq_plr*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
